[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "translation-ai-mcp"
version = "1.0.0"
description = "MEOK AI Labs — Language tools powered by MEOK AI Labs."
authors = [{name="MEOK AI Labs", email="nicholas@meok.ai"}]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
keywords = ["mcp", "mcp-server", "model-context-protocol", "claude", "ai-tools", "meok-ai-labs", "translation", "language-translation", "i18n", "localization", "multilingual"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Intended Audience :: Developers",
]
dependencies = [
    "mcp>=1.0.0",
]

[project.urls]
Homepage = "https://meok.ai"
Repository = "https://github.com/CSOAI-ORG/translation-ai-mcp"
Documentation = "https://meok.ai/docs/translation-ai-mcp"
"Bug Tracker" = "https://github.com/CSOAI-ORG/translation-ai-mcp/issues"
