[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[project]
name = "translation-ai-mcp"
version = "1.0.10"
readme = "README.md"
description = "Translation Ai automation via MCP. Includes translate text, detect language, check grammar. By MEOK AI Labs."
license = {file = "LICENSE"}
requires-python = ">=3.10"
authors = [{name = "MEOK AI Labs", email = "nicholas@meok.ai"}]
dependencies = ["mcp>=1.0.0"]
keywords = ["mcp", "ai", "meok", "translation"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries",
]
[project.urls]
Homepage = "https://meok.ai"
Repository = "https://github.com/CSOAI-ORG/translation-ai-mcp"
[tool.hatch.build.targets.wheel]
packages = ["."]
only-include = ["server.py", "auth_middleware.py"]

[project.scripts]
translation_ai_mcp = "server:main"
